# brosdk-assistant

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  SECURITY.md
docs/: roadmap.md  v2-plan.md
extension/: package-lock.json  package.json  wxt.config.ts
extension/entrypoints/: background.ts
extension/entrypoints/options/: index.html
extension/entrypoints/settings/: main.tsx
extension/entrypoints/sidepanel/: index.html  main.tsx
extension/scripts/: generate-icons.mjs  test-extension-smoke.mjs
extension/src/: App.tsx  OptionsApp.tsx  nativeClient.ts  settings.ts  styles.css  types.ts
native-host/: Cargo.toml  native-host-manifest.example.json
native-host/scripts/: install-windows.ps1  uninstall-windows.ps1
native-host/src/: main.rs  mcp_integration_tests.rs  protocol.rs
native-host/src/agent/: confirmation.rs  details.rs  mod.rs  run.rs
native-host/src/providers/: openai.rs
native-host/src/tools/: mcp.rs  mod.rs  workspace.rs
scripts/: package_release.py  test_deepseek_e2e.py  test_native_protocol_e2e.py
